--- a/QPUCpicker.html
+++ b/QPUCpicker.html
@@ -137,14 +137,22 @@
     import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
 
     // 2. TA CONFIGURATION FIREBASE (À REMPLACER)
-    const firebaseConfig = {
-        apiKey: "TON_API_KEY",
-        authDomain: "TON_PROJET.firebaseapp.com",
-        projectId: "TON_PROJET",
-        storageBucket: "TON_PROJET.appspot.com",
-        messagingSenderId: "...",
-        appId: "..."
-    };
+  const firebaseConfig = {
+
+  apiKey: "AIzaSyCJnSe8Z2vhLAzoKL4Awr94TD0y2ncSZwA",
+
+  authDomain: "arizozo01.firebaseapp.com",
+
+  projectId: "arizozo01",
+
+  storageBucket: "arizozo01.firebasestorage.app",
+
+  messagingSenderId: "983197543312",
+
+  appId: "1:983197543312:web:6f585242e9c0268fd82115"
+
+};
+
 
     // 3. INITIALISATION
     const app = initializeApp(firebaseConfig);
@@ -249,5 +257,6 @@
 </script>
 </body>
 </html>
+
 
 
