--- a/QPUCpicker.html
+++ b/QPUCpicker.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <link rel="icon" href="data:,">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Picker Equité & Mixage</title>
@@ -257,6 +258,7 @@
 </script>
 </body>
 </html>
+
 
 
 
